# elfcat

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  elfcat.1  elfcat.c
